--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="col-sm-4">
                 <h3>Compartilhe 😎</h3>
                 <p>Ajude a quem precisa de uma maneira rapida e facil de Compartilhar sua localização.</p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=example.org" target="_blank">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://gabrielduartemg.github.io/" target="_blank">
                     Compartilhar no Facebook
                 </a>
             </div>
