--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <meta name="theme-color" content="#ffffff">
     <script src="js/lib/checkCountryLib.js"></script>
     <link rel="stylesheet" href="css/index.css">
-    <script src="js/lib/uniqueKey.js"></script>
+    <script src="js/lib/simpleAcessCounter.min.js"></script>
+
+    <script debug="1" src="js/lib/uniqueKey.js"></script>
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
     <script src="js/lib/bootstrap.min.js"></script>
     <script src="js/lib/popper.min.js"></script>
