--- a/base64.html
+++ b/base64.html
@@ -19,6 +19,11 @@
         }
     </script>
     <style>
+        #copiado {
+            font-weight: bold;
+            user-select: none;
+        }
+
         #Converter {
             margin-left: 30%;
             margin-top: 3%;
@@ -33,48 +38,180 @@
             box-shadow: 1px 1px 1px #999;
         }
 
-        .x {
-            width: 50%;
+        .file-drop-area {
+            position: relative;
+            display: flex;
+            align-items: center;
+            width: 450px;
+            max-width: 100%;
+            padding: 25px;
+            border: 1px dashed rgba(255, 255, 255, 0.4);
+            border-radius: 3px;
+            transition: 0.2s;
+
+            &.is-active {
+                background-color: rgba(255, 255, 255, 0.05);
+            }
+        }
+
+        .fake-btn {
+            flex-shrink: 0;
+            background-color: rgba(255, 255, 255, 0.04);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 3px;
+            padding: 8px 15px;
+            margin-right: 10px;
+            font-size: 12px;
+            text-transform: uppercase;
+        }
+
+        .file-msg {
+            font-size: small;
+            font-weight: 300;
+            line-height: 1.4;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        .file-input {
+            position: absolute;
+            left: 0;
+            top: 0;
+            height: 100%;
+            width: 100%;
+            cursor: pointer;
+            opacity: 0;
+
+            &:focus {
+                outline: none;
+            }
+        }
+
+        body {
+            align-items: center;
+            justify-content: space-between;
+            background: linear-gradient(to right, #2fbd82, #452fbd);
+            color: #D7D7EF;
+            font-family: 'Lato', sans-serif;
+        }
+
+        .myButton {
+            -moz-box-shadow: inset 0px 1px 0px 0px #ffffff;
+            -webkit-box-shadow: inset 0px 1px 0px 0px #ffffff;
+            box-shadow: inset 0px 1px 0px 0px #ffffff;
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #f6f6f6));
+            background: -moz-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+            background: -webkit-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+            background: -o-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+            background: -ms-linear-gradient(top, #ffffff 5%, #f6f6f6 100%);
+            background: linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#f6f6f6', GradientType=0);
+            background-color: #ffffff;
+            -moz-border-radius: 6px;
+            -webkit-border-radius: 6px;
+            border-radius: 6px;
+            border: 1px solid #dcdcdc;
+            display: inline-block;
+            cursor: pointer;
+            color: #666666;
+            font-family: Arial;
+            font-size: 15px;
+            font-weight: bold;
+            padding: 6px 24px;
+            text-decoration: none;
+            text-shadow: 0px 1px 0px #ffffff;
+        }
+
+        .myButton:hover {
+            background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #f6f6f6), color-stop(1, #ffffff));
+            background: -moz-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+            background: -webkit-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+            background: -o-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+            background: -ms-linear-gradient(top, #f6f6f6 5%, #ffffff 100%);
+            background: linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f6f6f6', endColorstr='#ffffff', GradientType=0);
+            background-color: #f6f6f6;
+        }
+
+        .myButton:active {
+            position: relative;
+            top: 1px;
+        }
+
+        h2 {
+            margin: 50px 0;
+        }
+
+        section {
+            flex-grow: 1;
         }
     </style>
 </head>
 
 <body>
     <div id="Converter">
-        <h5>Selecione o arquivo</h5>
-        <input type="file" id="arquivoUpload" name="arquivoUpload">
+        <div class="file-drop-area">
+            <span class="fake-btn">Selecione o arquivo</span>
+            <span class="file-msg">ou arraste e solte</span>
+            <input class="file-input" id="arquivoUpload" type="file">
+        </div>
         <br>
-        <h5>Insira a URL</h5>
-        <input class="w3-input w3-border w3-round-large x" type="url" id="urlArquivo" name="urlArquivo"
-            placeholder="Url do arquivo"></p>
-        <button id="ConverterBtn">Converter</button>
+        <input class="w3-input w3-border w3-round-large x" style="width :  600px;" type="url" id="urlArquivo"
+            name="urlArquivo" placeholder="Insira a URL"></p>
+        <a href="#" id="ConverterBtn" class="myButton">Converter</a>
         <br>
         <br>
         <textarea name="Text1" id="Result" cols="80" rows="5"></textarea>
         <br>
-        <button id="copyClipboard" style="margin-top: 1%;">Copiar para o clipboard</button>
-        <button id="OpenImage">Visualizar Base64</button>
+        <a href="#" id="copyClipboard" style="margin-top: 1%;" class="myButton">Copiar para o clipboard</a>
+        <a href="#" id="OpenImage" class="myButton">Visualizar Base64</a>
+        <a href="#" id="criarArquivoBtn" class="myButton">Baixar arquivo Base64</a>
         <br>
         <br>
         <p id="copiado"></p>
-        <br>
-        <!-- <img id="blah" src="#" alt="your image" /> -->
+        <p hidden id="variavelNomeArquivo"></p>
     </div>
     <script id="backendConverter">
+        const criarArquivo = () => {
+            var element = document.createElement('a');
+            element.setAttribute('href', 'data:base64/plain;charset=utf-8,' + encodeURIComponent($("#Result").val()));
+            element.setAttribute('download', $('p#variavelNomeArquivo').text().split('.').slice(0, -1).join('.'));
+            element.style.display = 'none';
+            document.body.appendChild(element);
+            element.click();
+            document.body.removeChild(element);
+        }
         $(document).ready(function () {
+            var $fileInput = $('.file-input');
+            var $droparea = $('.file-drop-area');
+            $fileInput.on('dragenter focus click', function () {
+                $droparea.addClass('is-active');
+            });
+            $fileInput.on('dragleave blur drop', function () {
+                $droparea.removeClass('is-active');
+            });
+            $fileInput.on('change', function () {
+                var filesCount = $(this)[0].files.length;
+                var $textContainer = $(this).prev();
+
+                if (filesCount === 1) {
+                    var fileName = $(this).val().split('\\').pop();
+                    $textContainer.text(fileName);
+                } else {
+                    $textContainer.text(filesCount + ' files selected');
+                }
+            });
             $('#OpenImage').click(() => {
                 var image = new Image();
                 image.src = $("#Result").val();
                 var w = window.open("", 'Imagem Convertida');
-                w.document.write('<title>Imagem Convertida</title>');
+                w.document.write(`<title>Imagem Convertida</title>`);
                 w.document.write(image.outerHTML);
-                if (win) {
-                    //Browser has allowed it to be opened
-                    win.focus();
-                } else {
-                    //Browser has blocked it
-                    alert('Please allow popups for this website');
-                }
+            });
+            $('#criarArquivoBtn').click(() => {
+                criarArquivo();
+                $('p#Copiado').text('Exportado arquivo');
             });
             $('#copyClipboard').click(() => {
                 $("#Result").select();
@@ -89,13 +226,15 @@
                 reader.onloadend = () => {
                     $('#Result').val(reader.result);
                     $("#arquivoUpload").val('');
+                    $('p#variavelNomeArquivo').text($('.file-msg').text());
+                    $('.file-msg').text(" ou arraste e solte");
                 }
                 if (file != null) {
                     reader.readAsDataURL(file);
                     $('p#Copiado').text(' ');
                 }
-
                 else if (url.length >= 1 && validURL(url)) {
+
                     var request = new XMLHttpRequest();
                     request.open('GET', "https://cors-anywhere.herokuapp.com/" + url, true);
                     request.responseType = 'blob';
@@ -103,8 +242,12 @@
                     request.setRequestHeader("Access-Control-Allow-Origin", "*");
                     request.onload = () => {
                         var reader = new FileReader();
+                        $('.file-msg').text(" ou arraste e solte");
+
+                        $('#urlArquivo').val("");
                         reader.readAsDataURL(request.response);
                         reader.onload = (e) => {
+                            $('p#variavelNomeArquivo').text('WebImage');
                             $('#Result').val(e.target.result);
                         };
                     };
