--- a/index.html
+++ b/index.html
@@ -1,103 +1,274 @@
-<html id="doc" lang="pt">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <script src="js/lib/jquery-3.4.1.min.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Express Location</title>
-    <link rel="apple-touch-icon" sizes="57x57" href="icon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="icon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="icon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="icon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="icon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="icon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="icon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="icon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="icon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="icon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
-    <link rel="manifest" href="icon/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <script src="js/lib/checkCountryLib.js"></script>
-    <link rel="stylesheet" href="css/index.css">
-    <script debug="1" id="simpleCounter" src="js/lib/simpleAcessCounter.min.js"></script>
-    <script src="js/lib/uniqueKey.js"></script>
-    <link rel="stylesheet" href="css/lib/bootstrap.min.css">
-    <script src="js/lib/bootstrap.min.js"></script>
-    <script src="js/lib/popper.min.js"></script>
-    <script src="js/lib/DontpadJS.js"></script>
-    <script src="js/lib/hash.min.js"></script>
 
-    <script src="js/index.js"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Gabriel Duarte</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+  <!-- JQuery -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js">
+  </script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.10.1/js/mdb.min.js"></script>
+  <!-- Bootstrap core CSS -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Material Design Bootstrap -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.10.1/css/mdb.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/resume.min.css" rel="stylesheet">
 
 </head>
 
-<body>
-    <div class="jumbotron text-center" style="user-select: none">
-        <h1>Express Location</h1>
-        <p>Envie a sua localização precisa com apenas 6 digitos</p>
+<body id="page-top">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">GABRIEL DUARTE</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2 user-select-none" src="img/profile.jpg" alt="">
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav user-select-none">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+        </li>
+      </ul>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4">
-                <h3>Enviar</h3>
-                <p>Envie sua localização facilmente, apenas libere a permissão e envie o codigo que irá aparecer.</p>
-                <button type="button" data-toggle="modal" data-target="#myModal" id="gerarEnviar" class="btn btn-primary">Gerar localização</button>
-            </div>
-            <div class="col-sm-4">
-                <h3>Receber</h3>
-                <p>Cole o codigo de 6 digitos e visualize a localização em tempo real.</p>
-                <input id="usr" placeholder="Codigo unico" type="text"><button id="go">Bora!</button>
-                <br>
-                <p id="labelLoading">Validando Codigo...</p>
-            </div>
-            <div class="col-sm-4">
-                <h3>Compartilhe 😎</h3>
-                <p>Ajude a quem precisa de uma maneira rapida e facil de Compartilhar sua localização.</p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://gabrielduartemg.github.io/" target="_blank">
-                    Compartilhar no Facebook
-                </a>
-            </div>
+  </nav>
+
+  <div class="container-fluid p-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+      <div class="w-100 ">
+        <h1 class="mb-0">Gabriel
+          <span class="text-primary">Duarte</span>
+        </h1>
+        <div class="subheading mb-5">Uberlândia - Minas Gerais / Brazil
+          <a href="mailto:gabriel160499@gmail.com">gabriel160499@gmail.com</a>
+        </div>
+        <p class="lead mb-5">I am developer and student, in my leisure, i development my custom projects and custom
+          libs. I like play Games, Watch movies and Walking with my dog. </p>
+        <div class="social-icons">
+          <a href="https://www.linkedin.com/in/gabriel-duarte-482b3861/" target="_blank">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/GabrielDuarteMG" target="_blank">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://fb.me/Gabriields18" target="_blank">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+      <div class="w-100">
+        <h2 class="mb-5">Experience</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">TR Java Developer</h3>
+            <div class="subheading mb-3">Grupo empresarial Peixoto</div>
+            <p>Analyze and create fix solutions for Java systems with Angular </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">June 2019 - December 2019</span>
+          </div>
         </div>
 
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">JR Developer</h3>
+            <div class="subheading mb-3">Everis</div>
+            <p>Support to systems on Ambev (Ab-INbev) Project, I develop systems using .Net and NodeJS</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2019 - June 2019</span>
+          </div>
+        </div>
 
-    </div>
-    <nav class="navbar fixed-bottom navbar-light bg-light">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Jr Support Analyst</h3>
+            <div class="subheading mb-3">Linx Sistemas</div>
+            <p>I support for Gas Systems (Tac's Systems and Emsys) </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">May 2018 - January 2019</span>
+          </div>
+        </div>
 
-        <ul class="nav navbar-nav float-right">
-            <a class="navbar-nav pull-right" target="_blank" rel="noopener noreferrer" href="https://github.com/GabrielDuarteMG">Criado Por Gabriel Duarte</a>
-            </li>
+      </div>
+
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Pitágoras Uberlândia</h3>
+            <div class="subheading mb-3">Bachelor of Information Systems</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2018 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">President Antônio Carlos University</h3>
+            <div class="subheading mb-3">Analyst and Development System</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2017 - January 2018</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+      <div class="w-100">
+        <h2 class="mb-5">Skills</h2>
+
+        <div class="subheading mb-3 ">Programming Languages &amp; Tools</div>
+        <ul class="list-inline dev-icons user-select-none">
+          <li class="list-inline-item">
+            <i class="fab fa-html5"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-css3-alt"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-js-square"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-angular"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-react"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-node"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-sass"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-java"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-vuejs"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-github-square"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fas fa-atom"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-npm"></i>
+          </li>
         </ul>
-    </nav>
-    <!-- <div id="map"></div> -->
-    <div class="modal" id="myModal">
-        <div class="modal-dialog">
-            <div class="modal-content">
 
+        <div class="subheading mb-3">Workflow</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Mobile app, and WebApps</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Cross Plataform apps</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Cross Functional Teams</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Agile Development &amp; Scrum</li>
+        </ul>
+      </div>
+    </section>
 
-                <div class="modal-header">
-                    <h4 class="modal-title" style="user-select: none">Codigo gerado</h4>
-                    <button type="button" style="user-select: none" class="close" data-dismiss="modal">&times;</button>
-                </div>
+    <hr class="m-0">
 
-                <div class="modal-body">
-                    <a id="codeLbl"></a>
-                </div>
-
-
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-warning" id="copiarBtn">Copiar</button>
-                    <button type="button" class="btn btn-danger" data-dismiss="modal">Fechar</button>
-                </div>
-
-            </div>
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="contact">
+      <div class="w-100">
+        <h2 class="mb-5">Contact</h2>
+        <div class="md-form w-50">
+          <input type="text" id="nameInput" class="form-control">
+          <label for="form1">Name</label>
         </div>
-    </div>
+        <div class="md-form w-50">
+          <input type="text" id="emailInput" class="form-control">
+          <label for="form1">Email</label>
+        </div>
+        <div class="md-form w-50">
+          <textarea id="form7" class="md-textarea form-control" rows="3"></textarea>
+          <label for="form7">Message</label>
+        </div>
+        <div class="g-recaptcha" data-sitekey="6LewRsoUAAAAAGyiISSiaWD3ZK9t9RNKoUu1Q9BR"></div>
+        <br>
+        <button class="btn peach-gradient" id="sendBtn">Send</button>
+      </div>
+    </section>
+
+    <div id="notifications"></div>
+    <hr class="m-0">
+    <script src="js/Notify.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
+    <!-- Plugin JavaScript -->
+    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="js/resume.min.js"></script>
+
 </body>
 
 </html>
