--- a/Express location.html
+++ b/Express location.html
@@ -34,6 +34,14 @@
     <script src="js/lib/hash.min.js"></script>
 
     <script src="js/index.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155371065-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        const gtag = () => dataLayer.push(arguments);
+        gtag('js', new Date());
+        gtag('config', 'UA-155371065-1');
+    </script>
 
 </head>
 
