Last Commit and Finish Form

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                 </li>
             </ul>
         </div>
+        <div id="lastCommitDiv">
+            <p>Last Commit</p>
+
+            <a target="_blank" id="lastCommit">Last Commit</a>
+        </div>
     </nav>
 
     <div class="container-fluid p-0">
