Fix Finish Forom

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div id="lastCommitDiv">
             <p>Last Commit</p>
 
-            <a target="_blank" id="lastCommit">Last Commit</a>
+            <a target="_blank" id="lastCommit">Loading.</a>
         </div>
     </nav>
 
