--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Custom fonts for this template -->
+    <link rel="stylesheet" href="https://unpkg.com/balloon-css/balloon.min.css">
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
@@ -264,6 +265,9 @@
                 <div class="g-recaptcha" data-sitekey="6LewRsoUAAAAAGyiISSiaWD3ZK9t9RNKoUu1Q9BR"></div>
                 <br>
                 <button class="btn peach-gradient" id="sendBtn">Send</button>
+                <label id="helpButton" aria-label="Contact Form API" data-balloon-pos="right"><i class="fas fa-question"></i></label>
+
+
             </div>
         </section>
 
