--- a/index.html
+++ b/index.html
@@ -1,18 +1,6 @@
+
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8"/>
-    <title>Redirect</title>
-    <!-- <meta http-equiv="refresh" content="1; URL='https://gabrields.dev/portfolio/'"/> -->
-    <script>
-        setTimeout(() => {
-            window.location.href = 'https://gabrields.dev/portfolio/'
-            location.href = 'https://gabrields.dev/portfolio/'
-            window.location.replace( 'https://gabrields.dev/portfolio/')
-        }, 1500);
-    </script>
-</head>
-<body>
-Loading...
-</body>
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://gabrields.dev/portfolio/</title>
+<meta http-equiv="refresh" content="0; URL=https://gabrields.dev/portfolio/">
+<link rel="canonical" href="https://gabrields.dev/portfolio/">
