--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://gabrields.dev/portfolio/</title>
+<title>Gabriel Duarte - Dev</title>
 <meta http-equiv="refresh" content="0; URL=https://gabrields.dev/portfolio/">
 <link rel="canonical" href="https://gabrields.dev/portfolio/">
